Updated: introduction, foundation

--- a/Final Documentation/Appendix/References.tex
+++ b/Final Documentation/Appendix/References.tex
@@ -22,7 +22,7 @@
 	
 	\bibitem{echo} N. Macedo, T. Guimar\"aes and A. Cunha, {\em Model repair and transformation with Echo}. In Proc. ASE 2013, ACM Press, 2013.
 	
-	\bibitem{bigul} Hsiang-Shang Ko, Tao Zan, and Zhenjiang Hu, {\em BiGUL: A formally verified core language for putback-based bidirectional programming.} In Partial Evaluation and Program Manipulation, PEPM'16, pages 61-72. ACM, 2016.
+	\bibitem{bigul} Hsiang-Shang Ko, Tao Zan, and Zhenjiang Hu, {\em BiGUL: A formally verified core language for putback-based bidirectional programming.} In Partial Evaluation and Program Manipulation, PEPM'16, pages 61-72, ACM, 2016.
 	
 	\bibitem{bigul-tutorial} Zhenjiang Hu and Hsiang-Shang Ko,  {\em Principle and Practice of Bidirectional Programming in BiGUL}, Tutorial [Online]. Available: http://www.prg.nii.ac.jp/project/bigul/tutorial.pdf
 	
@@ -31,6 +31,14 @@
 	\bibitem{share} {\em SHARE - Sharing Hosted Autonomous Research Environments}, [Online]. Available: http://is.ieis.tue.nl/staff/pvgorp/share/
 	
 	\bibitem{wiki-transformation} {\em Wikipedia. "Model transformation."} Retrieved March, 2017, from https://en.wikipedia.org/wiki/Model{\_}transformation.
+	
+	\bibitem{semethods} S. Easterbrook, J. Singer, M.-A. Storey, \& D. Damian. {\em Selecting Empirical Methods for Software Engineering Research. Guide to Advanced Empirical Software Engineering}, 285-311, 2008. Retrieved from http://doi.org/10.1007/978-1-84800-044-5\_11
+	
+	\bibitem{uml} J. Rumbaugh, I. Jacobson and G. Booch, {\em Unified Modeling Language Reference Manual, The (2nd Edition)}, Pearson Higher Education, pages 1-21, 2004.
+	
+	\bibitem{mdsd} S. Beydeda, M. Book and V. Gruhn, {\em Model-Driven Software Development}, ACM Computing Classification, pages 1-8, 1998.
+	
+	\bibitem{modeltransform} S. Sendall and W. Kozaczynski, {\em Model transformation: the heart and soul of model-driven software development},  IEEE, Vol. 20, Issue: 5, pages 42-45, Sept.-Oct. 2003.
 	
 	
 \end{thebibliography}
